2006-10-05  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (*top-map*): init to nil
	populate *top-map* with bindings when it's nil.
	
	* user.lisp (*root-map*): swap hsplit and vsplit bindings.
	(*root-map*): init to nil
	populate *root-map* with bindings when it's nil.

2006-10-03  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (run-prog): for sbcl and cmucl let the
	subprocess inherit the stdout and stderr streams of the current
	process.

2006-09-28  Shawn Betts  <sabetts@vcn.bc.ca>

	* version.lisp (*version*): new defvar
	(echo-version): new function
	("version"): new command

	* user.lisp (*root-map*): bind v to version

	* stumpwm.asd (:stumpwm): add version.lisp

2006-09-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* sample-stumpwmrc.lisp: add example of changing prefix key.

	* user.lisp (set-prefix-key): verify the KEY's type.

2006-09-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("shell"): use xterm

	* core.lisp (expand-frame): dont quote symbols in ecase
	(expand-tree): likewise
	(resize-frame): likewise

	* user.lisp (run-or-raise): new function
	("shell"): new command
	("web"): new command

2006-08-30  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("only"): hide windows not in the focused frame.
	(choose-frame-by-number): use get-frame-number-translation to
	search for a matching frame
	(parse-and-run-command): likewise

	* primitives.lisp (*focus-frame-hook*): new hook
	(*frame-number-map*): new global variable
	(get-frame-number-translation): new function

	* core.lisp (focus-frame): call *focus-frame-hook* hooks
	(draw-frame-numbers): use get-frame-number-translation for the frame's "id"

2006-08-17  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind up, down, left, right to move focus in the corresponding direction.
	(find-closest-frame): new function
	("move-focus"): new command

2006-06-22  sabetts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): call update-modifier-map

	* primitives.lisp (*all-modifiers*): new global